--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="style.css">
         <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
         <link href="https://assets3.lottiefiles.com/packages/lf20_bwnHjUCsaL.json">
+        <link rel="icon" href="assets/icon.png">
 
 
 
